--- a/html/index.html
+++ b/html/index.html
@@ -2,9 +2,93 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
+      body {
+        background-color: #02162b;
+        font-family: Arial, sans-serif;
+      }
+      .nav-bar {
+        height: 70px;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        background-color: #00283a;
+      }
+      .nav-bar-left {
+        height: 100%;
+        width: 30%;
+        display: flex;
+        flex-direction: row;
+        justify-content: start;
+      }
+      .nav-bar-right {
+        height: 100%;
+        width: 70%;
+        display: flex;
+        flex-direction: row;
+      }
+      .nav-bar-right div,
+      .nav-bar-left div {
+        height: 100%;
+        flex: 1;
+        color: white;
+        display: flex;
+        align-items: center;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <div class="nav-box">
+      <div class="nav-bar">
+        <div class="nav-bar-left">
+          <div class="go-home-logo">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-arrow-return-left"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5z"
+              />
+            </svg>
+          </div>
+          <div>my information</div>
+        </div>
+        <div class="nav-bar-right">
+          <div class="container">Main-page</div>
+          <div class="container">projects</div>
+          <div class="container">experience</div>
+          <div class="container">contact</div>
+          <div class="container">small-apps</div>
+          <div class="container"><button id="mode-switch">hi</button></div>
+        </div>
+      </div>
+      <div class="invisible-container"></div>
+    </div>
+    <div style="width: 80%; height: 300px">
+      <img
+        src="/logo-img/wallhaven-rr676j_1920x1080.png"
+        alt=""
+        style="width: 100%; height: 100%; object-fit: cover"
+      />
+    </div>
+
+    <script>
+      const modeSwitchButton = document.getElementById("modeSwitch");
+      const body = document.body;
+
+      modeSwitchButton.addEventListener("click", () => {
+        body.classList.toggle("dark-mode");
+      });
+    </script>
+  </body>
 </html>
