--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/lightmode.css" />
     <style>
       * {
         margin: 0;
@@ -11,13 +12,33 @@
       body {
         background-color: #02162b;
         font-family: Arial, sans-serif;
+        margin-bottom: 3000px;
+      }
+      .navbar-wrapper {
+        width: 100%;
+        height: 78px;
+        position: fixed;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
       }
       .nav-bar {
         height: 70px;
+
         width: 100%;
         display: flex;
         flex-direction: row;
-        background-color: #00283a;
+        background-color: var(--bg-color-blue);
+      }
+      .navbar-shadow {
+        width: 100%;
+        height: 8px;
+        background-color: #00283a55;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+      }
+      .invisible-containe {
+        height: 70px;
       }
       .nav-bar-left {
         height: 100%;
@@ -40,10 +61,64 @@
         display: flex;
         align-items: center;
       }
+      .wrapper {
+        display: flex;
+        justify-content: center;
+      }
+      .main-offset {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        max-width: 1600px;
+      }
+      .flex {
+        display: flex;
+        width: 100%;
+      }
+      .flex-col {
+        flex-direction: column;
+      }
+      .justify-center {
+        justify-content: center;
+      }
+      .card-wrapper {
+        width: 350px;
+        height: calc(100vh - 180px);
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-180%, -50%);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      .card {
+        width: 100%;
+        height: calc(100% - 10px);
+        background-color: var(--bg-color-black-34);
+        backdrop-filter: blur(10px);
+        overflow-y: scroll;
+        border-radius: 20px;
+        padding: 20px;
+        box-sizing: border-box;
+        color: #fff;
+      }
+      .card::-webkit-scrollbar {
+        display: none;
+      }
+      .smallcard {
+        display: block;
+        content: "";
+        width: calc(100% - 60px);
+        height: 8px;
+        background-color: var(--bg-color-black-11);
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+      }
     </style>
   </head>
   <body>
-    <div class="nav-box">
+    <div class="navbar-wrapper">
       <div class="nav-bar">
         <div class="nav-bar-left">
           <div class="go-home-logo">
@@ -72,14 +147,31 @@
           <div class="container"><button id="mode-switch">hi</button></div>
         </div>
       </div>
-      <div class="invisible-container"></div>
+      <div class="navbar-shadow"></div>
     </div>
-    <div style="width: 80%; height: 300px">
-      <img
-        src="/logo-img/wallhaven-rr676j_1920x1080.png"
-        alt=""
-        style="width: 100%; height: 100%; object-fit: cover"
-      />
+    <div class="invisible-container"></div>
+    <div class="wrapper">
+      <div class="main-offset">
+        <div class="flex flex-col justify-center">
+          <div
+            class="flex justify-center"
+            style="
+              height: calc(100vh - 20rem);
+              background-size: cover;
+              background-attachment: fixed;
+              background-image: url('/logo-img/wallhaven-rrezx7_1920x1080.png');
+              border-bottom-left-radius: 30px;
+              border-bottom-right-radius: 30px;
+            "
+          ></div>
+        </div>
+        <div class="card-wrapper">
+          <div class="smallcard"></div>
+          <div class="card shimmer">
+            <h1>Hello, World!</h1>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script>
