--- a/html/index.html
+++ b/html/index.html
@@ -192,41 +192,116 @@
             </div>
           </div>
           <div class="layout-default-main">
-            <h1>Hello, World!</h1>
-            <button class="sub-title-btn animated-btn">
-              了解一下
-              <span class="animation-swing"
-                ><svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="11"
-                  height="11"
-                  fill="currentColor"
-                  class="bi bi-caret-right-fill"
-                  viewBox="0 0 16 16"
-                >
-                  <path
-                    d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"
-                  />
-                </svg>
-              </span>
-            </button>
-            <button class="ruieghierugh animated-btn">
-              ORDER NOW
-              <span class="animation-swing"
-                ><svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="11"
-                  height="11"
-                  fill="currentColor"
-                  class="bi bi-caret-right-fill"
-                  viewBox="0 0 16 16"
-                >
-                  <path
-                    d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"
-                  />
-                </svg>
-              </span>
-            </button>
+            <div class="main-first-div">
+              <p>HI MY NEW FRIEND</p>
+              <h1
+                style="
+                  font-size: 56px;
+                  font-family: Arial, Helvetica, sans-serif;
+                  font-weight: 400;
+                "
+              >
+                Hello
+              </h1>
+              <h1
+                style="
+                  font-size: 56px;
+                  font-family: Arial, Helvetica, sans-serif;
+                  font-weight: 600;
+                "
+              >
+                I'm Sunkar
+              </h1>
+              <button class="sub-title-btn animated-btn">
+                ABOUT ME
+                <span class="animation-swing"
+                  ><svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="11"
+                    height="11"
+                    fill="currentColor"
+                    class="bi bi-caret-right-fill"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"
+                    />
+                  </svg>
+                </span>
+              </button>
+            </div>
+            <div class="main-second-div">
+              <div class="number-create-wrapper">
+                <div class="smallcard"></div>
+                <div class="number-create-div">
+                  <div class="number-icon">
+                    <p>3</p>
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      fill="#ff8181"
+                      class="bi bi-plus"
+                      viewBox="0 0 16 16"
+                    >
+                      <path
+                        d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"
+                      />
+                    </svg>
+                  </div>
+                  <p>- - - - - - - - - - - - - - - - - -</p>
+                  <p class="created-project-text">CREATED PROJECTS</p>
+                </div>
+              </div>
+
+              <div class="number-create-wrapper">
+                <div class="smallcard"></div>
+                <div class="number-create-div">
+                  <div class="number-icon">
+                    <p>2</p>
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      fill="#ff8181"
+                      class="bi bi-plus"
+                      viewBox="0 0 16 16"
+                    >
+                      <path
+                        d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"
+                      />
+                    </svg>
+                  </div>
+                  <p>- - - - - - - - - - - - - - - - - -</p>
+                  <p class="created-project-text">TEAM PROJECTS</p>
+                </div>
+              </div>
+              <div class="number-create-wrapper">
+                <div class="smallcard"></div>
+                <div class="number-create-div">
+                  <div class="number-icon">
+                    <p>0</p>
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      fill="#ff8181"
+                      class="bi bi-plus"
+                      viewBox="0 0 16 16"
+                    >
+                      <path
+                        d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"
+                      />
+                    </svg>
+                  </div>
+                  <p>- - - - - - - - - - - - - - - - - -</p>
+                  <p class="created-project-text">PRICES</p>
+                </div>
+              </div>
+            </div>
+            <div class="border-div">
+              <p class="line">- - - - - - - - - - - - - - - - - - - - - - -</p>
+            </div>
             <div
               style="
                 width: 100%;
