--- a/html/index.html
+++ b/html/index.html
@@ -300,7 +300,126 @@
               </div>
             </div>
             <div class="border-div">
-              <p class="line">- - - - - - - - - - - - - - - - - - - - - - -</p>
+              <p style="font-size: 16px">MY STORIES</p>
+              <p class="line">
+                - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+                - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+                - - - - - - - - - - - - -
+              </p>
+              01
+            </div>
+            <div class="main-third-div">
+              <div
+                style="
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: start !important;
+                  font-size: 40px;
+                  color: #ff8181;
+                  margin-left: 30px;
+                "
+              >
+                "
+              </div>
+              <p>
+                I hope I could keep advancing and let my life shine as a
+                precious stone.and make my parents proud.
+              </p>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: end !important;
+                  font-size: 40px;
+                  color: #ff8181;
+                  margin-right: 30px;
+                "
+                ;
+              >
+                "
+              </div>
+            </div>
+            <div class="border-div">
+              <p style="font-size: 16px">MY STORIES</p>
+              <p class="line">
+                - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+                - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+                - - - - - - - - - - - - -
+              </p>
+              01
+            </div>
+            <div class="main-fourth-div"></div>
+            <div class="border-div">
+              <p style="font-size: 16px">MY STORIES</p>
+              <p class="line">
+                - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+                - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+                - - - - - - - - - - - - -
+              </p>
+              01
+            </div>
+            <div class="main-fifth-div">
+              <div>
+                <div class="fifth-content">
+                  <svg
+                    t="1649230330671"
+                    class="icon"
+                    viewBox="0 0 1024 1024"
+                    version="1.1"
+                    xmlns="http://www.w3.org/2000/svg"
+                    p-id="1638"
+                    width="40"
+                    height="40"
+                  >
+                    <path
+                      d="M488.96 506.88h40.96v307.2h-40.96zM803.84 737.28h-97.28c-45.056 0-81.92-36.864-81.92-81.92V502.272h40.96V655.36c0 22.528 18.432 40.96 40.96 40.96h97.28v40.96zM312.32 737.28H215.04v-40.96h97.28c22.528 0 40.96-18.432 40.96-40.96V502.272h40.96V655.36c0 45.056-36.864 81.92-81.92 81.92z"
+                      fill="#254665"
+                      p-id="1639"
+                    ></path>
+                    <path
+                      d="M509.44 942.08c-46.592 0-84.48-37.888-84.48-84.48S462.848 773.12 509.44 773.12s84.48 37.888 84.48 84.48-37.888 84.48-84.48 84.48z m0-128c-24.064 0-43.52 19.456-43.52 43.52s19.456 43.52 43.52 43.52 43.52-19.456 43.52-43.52-19.456-43.52-43.52-43.52zM171.52 798.72c-46.592 0-84.48-37.888-84.48-84.48S124.928 629.76 171.52 629.76 256 667.648 256 714.24 218.112 798.72 171.52 798.72z m0-128c-24.064 0-43.52 19.456-43.52 43.52s19.456 43.52 43.52 43.52 43.52-19.456 43.52-43.52-19.456-43.52-43.52-43.52zM847.36 798.72c-46.592 0-84.48-37.888-84.48-84.48s37.888-84.48 84.48-84.48 84.48 37.888 84.48 84.48-37.888 84.48-84.48 84.48z m0-128c-24.064 0-43.52 19.456-43.52 43.52s19.456 43.52 43.52 43.52 43.52-19.456 43.52-43.52-19.456-43.52-43.52-43.52z"
+                      fill="#254665"
+                      p-id="1640"
+                    ></path>
+                    <path
+                      d="M683.52 543.232H319.488c-90.112 0-163.328-73.216-163.328-163.328 0-90.112 73.216-163.328 163.328-163.328h7.68C344.064 138.752 413.696 81.92 495.616 81.92c69.632 0 132.608 42.496 159.232 105.472 9.728-1.536 19.456-2.56 29.184-2.56 98.816 0 179.2 80.384 179.2 179.2-0.512 98.816-80.896 179.2-179.712 179.2zM319.488 258.048c-67.584 0-122.368 54.784-122.368 122.368s54.784 122.368 122.368 122.368h364.544c76.288 0 138.24-61.952 138.24-138.24s-61.952-138.24-138.24-138.24c-12.288 0-24.576 1.536-36.864 5.12l-19.456 5.12-5.632-18.944C605.696 161.792 553.472 122.88 495.616 122.88c-68.096 0-124.416 51.2-131.584 118.784l-2.048 22.016-21.504-3.584c-7.168-1.536-14.336-2.048-20.992-2.048z"
+                      fill="#254665"
+                      p-id="1641"
+                    ></path>
+                    <path
+                      d="M655.36 640H307.2V424.96c0-33.792 27.648-61.44 61.44-61.44h348.16v215.04c0 33.792-27.648 61.44-61.44 61.44z"
+                      fill="#254665"
+                      opacity=".18"
+                      p-id="1642"
+                    ></path>
+                  </svg>
+                  <p>UI Design</p>
+                  <div class="fifth-text-div">
+                    <p></p>
+                    <p></p>
+                  </div>
+                  <button class="order-button animated-btn">
+                    ORDER NOW
+                    <span class="animation-swing"
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="11"
+                        height="11"
+                        fill="currentColor"
+                        class="bi bi-caret-right-fill"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"
+                        />
+                      </svg>
+                    </span>
+                  </button>
+                </div>
+              </div>
+              <div></div>
+              <div></div>
+              <div></div>
             </div>
             <div
               style="
