--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -20,7 +20,9 @@
           </div>
           <div class="explanation-div">
             <p>“</p>
-            <p>hi just a useless site made by sunkar</p>
+            <p style="font-weight: bold;font-size: 24px; font-style: italic;">hi just a useless site made by sunkar</p>
+            <p>nothing matter</p>
+            <p>like for real</p>
             <p>”</p>
           </div>
           <div class="icons-div">
@@ -86,7 +88,7 @@
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-people-fill" viewBox="0 0 16 16">
                 <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7Zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216ZM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z"/>
               </svg>
-              friends</div>
+             rock-paper</div>
             <div class="websites-div">1</div>
             <div class="websites-div">1</div>
           </div>
