huge update without sleep

--- a/index.html
+++ b/index.html
@@ -406,10 +406,10 @@
               <div class="main-fourth-div">
                 <div id="videoPlayer">
                   <video id="myVideo" width="400" controls>
-                    <source src="your-video-file.mp4" type="video/mp4" />
+                    <source src="/logo-img/resume.mp4" type="video/mp4" />
                     Your browser does not support the video tag.
                   </video>
-                  <button id="playPauseBtn">播放</button>
+                  <button id="playPauseBtn">play</button>
                 </div>
               </div>
               <div class="border-div">
@@ -428,7 +428,7 @@
                         xmlns="http://www.w3.org/2000/svg"
                         width="32"
                         height="32"
-                        fill="#fff"
+                        fill="var(--bgg-color-font)"
                         class="bi bi-browser-chrome"
                         viewBox="0 0 16 16"
                       >
@@ -438,7 +438,11 @@
                         />
                       </svg>
                       <p
-                        style="color: white; font-size: 22px; font-weight: bold"
+                        style="
+                          color: var(--bgg-color-font);
+                          font-size: 22px;
+                          font-weight: bold;
+                        "
                       >
                         web Design
                       </p>
@@ -475,26 +479,33 @@
                         xmlns="http://www.w3.org/2000/svg"
                         width="32"
                         height="32"
-                        fill="#fff"
-                        class="bi bi-browser-chrome"
+                        fill=" var(--bgg-color-font)"
+                        class="bi bi-translate"
                         viewBox="0 0 16 16"
                       >
                         <path
-                          fill-rule="evenodd"
-                          d="M16 8a8.001 8.001 0 0 1-7.022 7.94l1.902-7.098a2.995 2.995 0 0 0 .05-1.492A2.977 2.977 0 0 0 10.237 6h5.511A8 8 0 0 1 16 8M0 8a8 8 0 0 0 7.927 8l1.426-5.321a2.978 2.978 0 0 1-.723.255 2.979 2.979 0 0 1-1.743-.147 2.986 2.986 0 0 1-1.043-.7L.633 4.876A7.975 7.975 0 0 0 0 8m5.004-.167L1.108 3.936A8.003 8.003 0 0 1 15.418 5H8.066a2.979 2.979 0 0 0-1.252.243 2.987 2.987 0 0 0-1.81 2.59ZM8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
+                          d="M4.545 6.714 4.11 8H3l1.862-5h1.284L8 8H6.833l-.435-1.286zm1.634-.736L5.5 3.956h-.049l-.679 2.022H6.18z"
+                        />
+                        <path
+                          d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zm7.138 9.995c.193.301.402.583.63.846-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6.066 6.066 0 0 1-.415-.492 1.988 1.988 0 0 1-.94.31z"
                         />
                       </svg>
                       <p
-                        style="color: white; font-size: 22px; font-weight: bold"
+                        style="
+                          color: var(--bgg-color-font);
+                          font-size: 22px;
+                          font-weight: bold;
+                        "
                       >
-                        web Design
+                        translation
                       </p>
                     </div>
 
                     <div class="fifth-text-div">
-                      <p style="color: #747474">html</p>
-                      <p style="color: #747474">sass</p>
-                      <p style="color: #747474">css</p>
+                      <p style="color: #747474">chinese</p>
+                      <p style="color: #747474">japanese</p>
+
+                      <p style="color: #747474">kazakh</p>
                     </div>
                     <button class="order-button animated-btn">
                       ORDER NOW
@@ -522,26 +533,33 @@
                         xmlns="http://www.w3.org/2000/svg"
                         width="32"
                         height="32"
-                        fill="#fff"
-                        class="bi bi-browser-chrome"
+                        fill=" var(--bgg-color-font)"
+                        class="bi bi-translate"
                         viewBox="0 0 16 16"
                       >
                         <path
-                          fill-rule="evenodd"
-                          d="M16 8a8.001 8.001 0 0 1-7.022 7.94l1.902-7.098a2.995 2.995 0 0 0 .05-1.492A2.977 2.977 0 0 0 10.237 6h5.511A8 8 0 0 1 16 8M0 8a8 8 0 0 0 7.927 8l1.426-5.321a2.978 2.978 0 0 1-.723.255 2.979 2.979 0 0 1-1.743-.147 2.986 2.986 0 0 1-1.043-.7L.633 4.876A7.975 7.975 0 0 0 0 8m5.004-.167L1.108 3.936A8.003 8.003 0 0 1 15.418 5H8.066a2.979 2.979 0 0 0-1.252.243 2.987 2.987 0 0 0-1.81 2.59ZM8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
+                          d="M4.545 6.714 4.11 8H3l1.862-5h1.284L8 8H6.833l-.435-1.286zm1.634-.736L5.5 3.956h-.049l-.679 2.022H6.18z"
+                        />
+                        <path
+                          d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zm7.138 9.995c.193.301.402.583.63.846-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6.066 6.066 0 0 1-.415-.492 1.988 1.988 0 0 1-.94.31z"
                         />
                       </svg>
                       <p
-                        style="color: white; font-size: 22px; font-weight: bold"
+                        style="
+                          color: var(--bgg-color-font);
+                          font-size: 22px;
+                          font-weight: bold;
+                        "
                       >
-                        web Design
+                        translation
                       </p>
                     </div>
 
                     <div class="fifth-text-div">
-                      <p style="color: #747474">html</p>
-                      <p style="color: #747474">sass</p>
-                      <p style="color: #747474">css</p>
+                      <p style="color: #747474">chinese</p>
+                      <p style="color: #747474">japanese</p>
+
+                      <p style="color: #747474">kazakh</p>
                     </div>
                     <button class="order-button animated-btn">
                       ORDER NOW
@@ -569,26 +587,33 @@
                         xmlns="http://www.w3.org/2000/svg"
                         width="32"
                         height="32"
-                        fill="#fff"
-                        class="bi bi-browser-chrome"
+                        fill=" var(--bgg-color-font)"
+                        class="bi bi-translate"
                         viewBox="0 0 16 16"
                       >
                         <path
-                          fill-rule="evenodd"
-                          d="M16 8a8.001 8.001 0 0 1-7.022 7.94l1.902-7.098a2.995 2.995 0 0 0 .05-1.492A2.977 2.977 0 0 0 10.237 6h5.511A8 8 0 0 1 16 8M0 8a8 8 0 0 0 7.927 8l1.426-5.321a2.978 2.978 0 0 1-.723.255 2.979 2.979 0 0 1-1.743-.147 2.986 2.986 0 0 1-1.043-.7L.633 4.876A7.975 7.975 0 0 0 0 8m5.004-.167L1.108 3.936A8.003 8.003 0 0 1 15.418 5H8.066a2.979 2.979 0 0 0-1.252.243 2.987 2.987 0 0 0-1.81 2.59ZM8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
+                          d="M4.545 6.714 4.11 8H3l1.862-5h1.284L8 8H6.833l-.435-1.286zm1.634-.736L5.5 3.956h-.049l-.679 2.022H6.18z"
+                        />
+                        <path
+                          d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zm7.138 9.995c.193.301.402.583.63.846-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6.066 6.066 0 0 1-.415-.492 1.988 1.988 0 0 1-.94.31z"
                         />
                       </svg>
                       <p
-                        style="color: white; font-size: 22px; font-weight: bold"
+                        style="
+                          color: var(--bgg-color-font);
+                          font-size: 22px;
+                          font-weight: bold;
+                        "
                       >
-                        web Design
+                        translation
                       </p>
                     </div>
 
                     <div class="fifth-text-div">
-                      <p style="color: #747474">html</p>
-                      <p style="color: #747474">sass</p>
-                      <p style="color: #747474">css</p>
+                      <p style="color: #747474">chinese</p>
+                      <p style="color: #747474">japanese</p>
+
+                      <p style="color: #747474">kazakh</p>
                     </div>
                     <button class="order-button animated-btn">
                       ORDER NOW
