--- a/html/life.html
+++ b/html/life.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/index.css" />
+
     <link rel="stylesheet" href="/css/lightmode.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -198,51 +199,108 @@
                   </div>
                 </div>
               </div>
+              <div
+                style="
+                  background-color: var(--bgg-color-blue);
+                  height: 200px;
+                  width: 100%;
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  align-items: center;
+                  gap: 20px;
+                "
+              >
+                <h1 style="color: var(--bgg-color-font)">
+                  my favourite music - never leave
+                </h1>
+                <div id="music-container ">
+                  <audio id="audio-player" controls>
+                    <source
+                      src="/DVRST_Oneheart_Never_Leave.mp3"
+                      type="audio/mp3"
+                    />
+                    Your browser does not support the audio element.
+                  </audio>
+                  <div id="controls" style="margin-top: 20px">
+                    <button
+                      type="button"
+                      class="btn btn-dark"
+                      style="background-color: #ff8181"
+                      onclick="playPause()"
+                    >
+                      play/pause
+                    </button>
 
-              <div id="carouselExample" class="carousel slide">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="/mountain2.jpg" class="d-block w-100" alt="..." />
-                  </div>
-                  <div class="carousel-item">
-                    <img
-                      src="/logo-img/mountain.png"
-                      class="d-block w-100"
-                      alt="..."
-                    />
-                  </div>
-                  <div class="carousel-item">
-                    <img
-                      src="/logo-img/wallhaven-rrezx7_1920x1080.png"
-                      class="d-block w-100"
-                      alt="..."
-                    />
+                    <button
+                      type="button"
+                      class="btn btn-dark"
+                      style="background-color: #ff8181"
+                      onclick="stop()"
+                    >
+                      stop
+                    </button>
+                    <button
+                      type="button"
+                      class="btn btn-dark"
+                      style="background-color: #ff8181"
+                      onclick="muteUnmute()"
+                    >
+                      mute/unmute
+                    </button>
                   </div>
                 </div>
-                <button
-                  class="carousel-control-prev"
-                  type="button"
-                  data-bs-target="#carouselExample"
-                  data-bs-slide="prev"
-                >
-                  <span
-                    class="carousel-control-prev-icon"
-                    aria-hidden="true"
-                  ></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button
-                  class="carousel-control-next"
-                  type="button"
-                  data-bs-target="#carouselExample"
-                  data-bs-slide="next"
-                >
-                  <span
-                    class="carousel-control-next-icon"
-                    aria-hidden="true"
-                  ></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
+              </div>
+              <div class="border-div">
+                <p style="font-size: 16px">happy moments</p>
+                <p class="line">
+                  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+                  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+                </p>
+              </div>
+              <div
+                style="
+                  height: 600px;
+                  width: 100%;
+                  display: grid;
+                  grid-template-columns: 1fr 1fr;
+                  grid-template-rows: 1fr 1fr;
+                  background-color: var(--bgg-color-blue);
+                  row-gap: 40px;
+                  column-gap: 40px;
+                "
+              >
+                <div
+                  style="
+                    border-radius: 30px;
+                    background-image: url(/mountain2.jpg);
+                    object-fit: cover;
+                    background-size: cover;
+                  "
+                ></div>
+                <div
+                  style="
+                    border-radius: 30px;
+                    background-image: url(/mountain2.jpg);
+                    background-size: cover;
+                  "
+                ></div>
+                <div
+                  style="
+                    border-radius: 30px;
+                    background-image: url(/mountain2.jpg);
+                    object-fit: cover;
+                    background-size: cover;
+                  "
+                ></div>
+                <div
+                  style="
+                    border-radius: 30px;
+                    background-image: url(/mountain2.jpg);
+                    object-fit: cover;
+                    background-size: cover;
+                  "
+                ></div>
               </div>
             </div>
           </div>
@@ -257,5 +315,25 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script>
+      const audioPlayer = document.getElementById("audio-player");
+
+      function playPause() {
+        if (audioPlayer.paused) {
+          audioPlayer.play();
+        } else {
+          audioPlayer.pause();
+        }
+      }
+
+      function stop() {
+        audioPlayer.pause();
+        audioPlayer.currentTime = 0;
+      }
+
+      function muteUnmute() {
+        audioPlayer.muted = !audioPlayer.muted;
+      }
+    </script>
   </body>
 </html>
