--- a/html/contact.html
+++ b/html/contact.html
@@ -159,7 +159,7 @@
                         />
                       </svg>
                     </a>
-                    <a href="">
+                    <a href="https://www.instagram.com/">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
@@ -175,7 +175,7 @@
                       </svg>
                     </a>
 
-                    <a href="#">
+                    <a href="https://www.youtube.com/">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
@@ -190,7 +190,7 @@
                         />
                       </svg>
                     </a>
-                    <a href="#"
+                    <a href="https://www.wechat.com/"
                       ><svg
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
