--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         />
                       </svg>
                     </a>
-                    <a href="">
+                    <a href=https://www.instagram.com/">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
@@ -174,7 +174,7 @@
                       </svg>
                     </a>
 
-                    <a href="#">
+                    <a href="https://www.youtube.com/">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
@@ -189,7 +189,7 @@
                         />
                       </svg>
                     </a>
-                    <a href="#"
+                    <a href="https://www.wechat.com/"
                       ><svg
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
