--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>about me</title>
+    <title>small-app</title>
     <link rel="stylesheet" href="/css/aboutMe.css" />
    
 
@@ -19,11 +19,11 @@
             <img src="/logo-img/icon_preview.d28ceb27-removebg-preview.png" alt="">
           </div>
           <div class="explanation-div">
-            <p>“</p>
+            <hr>
             <p style="font-weight: bold;font-size: 24px; font-style: italic;">hi just a useless site made by sunkar</p>
             <p>nothing matter</p>
             <p>like for real</p>
-            <p>”</p>
+          <hr>
           </div>
           <div class="icons-div">
             <a href="https://github.com/sonkaru">
@@ -50,8 +50,15 @@
       <div class="content-right">
         <div class="right-side-box">
           <div class="upper-content">
-            <div class="time">
-                1
+            <div class="time" style="display: flex;flex-direction: column;
+            justify-content: center;align-items: center; font-size: 30px;">
+               <svg fill="#fff" width="103px" height="103px" viewBox="-4 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                <g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round">
+
+                </g>
+                <g id="SVGRepo_iconCarrier"> 
+                  <title>app</title> 
+                  <path d="M18.031 17.969l-0.094 0.063c-0.469 0.25-0.781 0.438-0.906 0.438-0.094 0.031-0.156 0.063-0.219 0.094-0.219-0.406-0.844-1.625-1.781-3.25-1.125-2.063-4.344-9.656-4.438-9.969-0.063-0.313 0-0.625 0.219-0.75 0.031-0.031 0.094-0.031 0.156-0.031 0.188 0 0.406 0.125 0.531 0.219 0.188 0.156 3.844 5.75 5.813 9.313 1.188 2.156 1.594 2.938 1.75 3.219-0.063 0.031-0.125 0.063-0.188 0.125-0.125 0.156-0.563 0.406-0.75 0.5h-0.031zM11.031 8.594l0.406 0.219c0.688 0.375 0.844 1.188 0.5 1.875l-2.719-1.563c0.25-0.438 0.719-0.688 1.156-0.688 0.25 0 0.469 0.031 0.656 0.156zM11.5 11.438l0.031 0.031c0.094 0.031 0.094 0.188 0.063 0.25s-0.094 0.094-0.156 0.094h-0.125l-0.031-0.031-0.094 0.156h0.031c0.094 0.063 0.125 0.156 0.094 0.25-0.063 0.063-0.094 0.094-0.156 0.094-0.031 0-0.063 0-0.094-0.031l-0.031-0.031-0.188 0.344 0.031 0.031c0.063 0.031 0.094 0.156 0.063 0.219s-0.094 0.094-0.156 0.094c-0.031 0-0.063 0-0.094-0.031h-0.031l-0.094 0.156 0.031 0.031c0.094 0.063 0.125 0.156 0.063 0.25-0.031 0.063-0.063 0.094-0.125 0.094-0.031 0-0.063-0.031-0.094-0.031l-0.031-0.031-0.094 0.125-0.125 0.219-2.719-1.563 0.125-0.219 0.094-0.125-0.031-0.031c-0.094-0.031-0.125-0.188-0.063-0.25 0.031-0.063 0.063-0.094 0.125-0.094 0.031 0 0.063 0 0.094 0.031h0.031l0.094-0.125-0.031-0.031c-0.094-0.063-0.125-0.156-0.063-0.25 0.031-0.063 0.094-0.094 0.156-0.094 0.031 0 0.063 0.031 0.094 0.031l0.031 0.031 0.188-0.344h-0.031c-0.094-0.063-0.125-0.156-0.063-0.25 0.031-0.063 0.063-0.094 0.125-0.094 0.031 0 0.063 0.031 0.094 0.031l0.031 0.031 0.094-0.188-0.031-0.031c-0.094-0.031-0.125-0.156-0.063-0.219 0.031-0.063 0.094-0.094 0.156-0.094h0.125l0.031 0.031 0.125-0.219 2.719 1.563zM1.75 22l5.375-9.313 2.719 1.594-5.5 9.5c-0.469-0.188-0.938-0.438-1.375-0.688-0.438-0.281-0.906-0.594-1.313-0.906l0.031-0.094zM0 20.625v-4.656h4.156l-2.719 4.656h-1.438zM16.281 19.625l0.438 0.656 0.156 0.156 0.094 0.188h-9.719l2.719-4.656h4.344c1.063 1.906 1.719 3.156 1.719 3.188 0.063 0.094 0.094 0.156 0.156 0.188 0.031 0.094 0.063 0.219 0.094 0.281zM20.531 18.125l-0.281-0.656c-0.063-0.094-0.094-0.156-0.156-0.219-0.031-0.094-0.063-0.188-0.094-0.25l-0.25-0.5c-0.094-0.156-0.188-0.313-0.313-0.531h4.563v4.656h-2.344c0-0.031-0.031-0.094-0.031-0.156l-0.344-0.719c-0.031-0.063-0.063-0.156-0.125-0.219 0-0.094-0.031-0.156-0.063-0.219l-0.313-0.719c-0.031-0.063-0.125-0.125-0.156-0.188-0.031-0.094-0.063-0.219-0.094-0.281zM20.406 20.156l0.313 0.625 0.031 0.094s-0.469 0.406-0.875 0.625-0.969 0.406-0.969 0.406l-0.094-0.125-0.344-0.563v-0.25l-0.25-0.188-0.469-0.656v-0.219l-0.219-0.156-0.25-0.406-0.156-0.25c0.219-0.031 0.594-0.188 1.156-0.5 0.031 0 0.031-0.031 0.063-0.031s0.031-0.031 0.063-0.031c0.469-0.25 0.813-0.469 0.969-0.688l0.125 0.281 0.188 0.406v0.344l0.219 0.125 0.313 0.719-0.031 0.313zM20.938 21.563l2.625 3.938c0.344 0.625 0.031 1.375-0.594 1.719-0.219 0.125-0.469 0.188-0.688 0.188-0.438 0-0.844-0.188-1.094-0.594l-1.906-4.344c0.219-0.094 0.594-0.25 0.906-0.406 0.25-0.156 0.563-0.344 0.75-0.5zM1 26.906l-0.156 0.281c-0.031 0.063-0.125 0.094-0.219 0.094h-0.031c-0.031 0-0.063 0-0.063-0.031-0.031 0-0.031-0.031-0.063-0.031-0.063-0.063-0.063-0.188-0.031-0.25l0.156-0.281 0.906-3.813c0.375 0.281 0.781 0.563 1.156 0.781s0.781 0.406 1.188 0.563z"></path> </g></svg>
             </div>
             <div class="time" style="display: flex;flex-direction: column;
             justify-content: center;align-items: center; font-size: 30px;">
@@ -63,7 +70,7 @@
           </div>
         
           <div class="down-content">
-            <div class="websites-div">
+            <div class="home-div">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
                 <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"/>
               </svg>
@@ -75,7 +82,7 @@
               </svg>
               Calculator
             </div>
-            <div class="websites-div">
+            <div class="todo-list-div">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-list-task" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M2 2.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5V3a.5.5 0 0 0-.5-.5H2zM3 3H2v1h1V3z"/>
                 <path d="M5 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM5.5 7a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1h-9zm0 4a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1h-9z"/>
@@ -83,7 +90,7 @@
               </svg>
               Todo-list
             </div>
-            <div class="websites-div">
+            <div class="rock-paper-div">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-people-fill" viewBox="0 0 16 16">
                 <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7Zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216ZM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z"/>
               </svg>
