--- a/html/life.html
+++ b/html/life.html
@@ -13,6 +13,7 @@
       crossorigin="anonymous"
     />
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <title>sunkar's resume</title>
   </head>
   <body>
     <div class="front">
