--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -16,7 +16,7 @@
       <div class="content-left">
         <div class="content-box">
           <div class="logo-div">
-            <img src="/logo-img/icon_preview.d28ceb27-removebg-preview.png" alt="">
+            <img src="/icon_preview.d28ceb27-removebg-preview.png" alt="">
           </div>
           <div class="explanation-div">
             <hr>
