--- a/html/index.html
+++ b/html/index.html
@@ -530,20 +530,8 @@
                 <div>
                   <div class="fifth-content">
                     <div class="fifth-logo">
-                      <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="32"
-                        height="32"
-                        fill=" var(--bgg-color-font)"
-                        class="bi bi-translate"
-                        viewBox="0 0 16 16"
-                      >
-                        <path
-                          d="M4.545 6.714 4.11 8H3l1.862-5h1.284L8 8H6.833l-.435-1.286zm1.634-.736L5.5 3.956h-.049l-.679 2.022H6.18z"
-                        />
-                        <path
-                          d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zm7.138 9.995c.193.301.402.583.63.846-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6.066 6.066 0 0 1-.415-.492 1.988 1.988 0 0 1-.94.31z"
-                        />
+                      <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="var(--bgg-color-font)" class="bi bi-scooter" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M9 2.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-.39l1.4 7a2.5 2.5 0 1 1-.98.195l-.189-.938-2.43 3.527A.5.5 0 0 1 9.5 13H4.95a2.5 2.5 0 1 1 0-1h4.287l2.831-4.11L11.09 3H9.5a.5.5 0 0 1-.5-.5M3.915 12a1.5 1.5 0 1 0 0 1H2.5a.5.5 0 0 1 0-1zm8.817-.789A1.499 1.499 0 0 0 13.5 14a1.5 1.5 0 0 0 .213-2.985l.277 1.387a.5.5 0 0 1-.98.196l-.278-1.387Z"/>
                       </svg>
                       <p
                         style="
@@ -552,15 +540,15 @@
                           font-weight: bold;
                         "
                       >
-                        translation
+                       sport-coach
                       </p>
                     </div>
 
                     <div class="fifth-text-div">
-                      <p style="color: #747474">chinese</p>
-                      <p style="color: #747474">japanese</p>
+                      <p style="color: #747474">basketball</p>
+                      <p style="color: #747474">badminton</p>
 
-                      <p style="color: #747474">kazakh</p>
+                      <p style="color: #747474">table-tennis</p>
                     </div>
                     <button class="order-button animated-btn">
                       ORDER NOW
@@ -779,6 +767,14 @@
                     </button>
                   </div>
                 </div>
+              </div>
+              <div class="border-div">
+                <p style="font-size: 16px">projects</p>
+                <p class="line">
+                  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+                  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+                </p>
+                
               </div>
               <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
